kubernetes/apps/renovate/renovate/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Renovate"
    homepage.shamubernetes.com/description: "Review dependency automation"
    homepage.shamubernetes.com/group: "Infrastructure"
    homepage.shamubernetes.com/order: "20"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:renovate"
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
    sectionName: https
  hostnames:
  - "renovate.${HOME_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: renovate
      port: 8080
